# rask

app/assets/stylesheets/: tasks.scss
app/controllers/: tasks_controller.rb  users_controller.rb
app/views/tasks/: _task.html.erb  update.turbo_stream.erb
app/views/users/: show.html.erb
cli/: Cargo.toml
cli/src/: document.rs  lib.rs  user.rs
lib/tasks/: create_user.rake
test/controllers/: users_controller_test.rb
test/fixtures/: api_tokens.yml
